[gd_scene load_steps=4 format=3 uid="uid://b55qpoq55ygxo"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_2abu6"]
[ext_resource type="PackedScene" uid="uid://dqqp6m7yugx8e" path="res://Scenes/input_button.tscn" id="2_h3x8f"]
[ext_resource type="Texture2D" uid="uid://cakkuw1y7o2fm" path="res://Art/exit_button.png" id="2_kc7kq"]

[node name="settings_menu" type="Control" node_paths=PackedStringArray("v_box_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2abu6")
input_button = ExtResource("2_h3x8f")
v_box_container = NodePath("Panel/MarginContainer/ScrollContainer/VBoxContainer")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="MuteLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Mute
"

[node name="MuteCheckBox" type="CheckBox" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 37.0
offset_bottom = 36.0
icon = ExtResource("2_kc7kq")

[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/VolumeSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/MuteCheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
